app/src/assets/scss/main-style.scss
/* ... */
/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
                                        Custom Popup
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/ 
.popup {

    .modal {
        max-width        : 524px;                             
        width            : 80%;                               
        background-color : #fff;                              
        position         : fixed;                             
        top              : 50%;                               
        left             : 50%;                               
        transform        : translate(-50%, -50%) scale(0);    
        transition       : 200ms ease-in-out;                 
        z-index          : 9999999;                           
        padding          : 49px 69px 33px;                    
        text-align       : center;                            
        box-shadow       : 0px 4px 16px rgba(16, 24, 32, 0.1);
        border-radius    : 20px;                              
        box-sizing       : border-box;                        
    
        &.active {
            transform: translate(-50%, -50%) scale(1);
        }
    
        .modal-title {

            p {
                text-align  : center;       
                font-family : $primary-font;
                @include em(21px, 31px);
                font-weight : 400;           
                color       : $primary-color;
    
                strong {
                    font-weight: 700;
                }
            }
        }

        .modal-image {
            margin: 52px 0 105px;
    
        }

        .modal-buttons {
            display         : flex;  
            justify-content : center;
            align-items     : center;
    
            button, a {
                padding    : 12px 24px;     
                @include em(18px, 22px);
                background      : #EDD767;                              
                box-shadow      : 0px 12px 24px -6px rgba(0, 0, 0, 0.2);
                border-radius   : 4px;                                  
                color           : #000;                                 
                font-weight     : 700;                                  
                transition      : all 0.3s ease;                        
                text-decoration : none;                                 
    
                &.active, &:hover, &:focus {
                    color      : #fff;                 
                    background : rgba(53, 158, 173, 1);
                }
    
                &.cancel {
                  margin-left: 16px;
                  background: #E4E4E4;
                }
    
                &.ok-next {
                    margin-left: 137px;
                }
            }
        }
    }
    
    #overlay {
        position         : fixed;               
        opacity          : 0;                   
        top              : 0;                   
        bottom           : 0;                   
        left             : 0;                   
        right            : 0;                   
        background-color : rgba(0, 64, 70, 0.3);
        pointer-events   : none;                
        transition       : 200ms ease-in-out;   
        z-index          : 99999;               
    
        &.active {
            opacity: 1;
            pointer-events: all;
    
        }
    }
}

/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
                                        Printing page
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/ 


.recipe-body {
    display         : flex;   
    flex-wrap       : wrap;   
    justify-content : center; 
    align-items     : stretch;
    overflow-y      : hidden;
    
    .prescription-empty {
      height          : 100%;  
      display         : flex;  
      flex-direction  : column;
      flex-wrap       : nowrap;
      justify-content : center;

      .print-wrapper {
        display         : flex;        
        flex-direction  : column;      
        flex-wrap       : nowrap;      
        justify-content : space-evenly;
        align-content   : flex-end;    
        align-items     : center;      
          img { 
              margin-bottom: 10px;
          }

          h3 {
              font-weight : 700;          
              font-family : $primary-font;
              @include em(24px, 36px);
          }
          p {
              font-weight : 400;          
              font-family : $primary-font;
              @include em(24px, 36px)

          }

      }
    }
}
/* ... */

